--- a/my-portfolio/src/index.css
+++ b/my-portfolio/src/index.css
@@ -1,11 +1,25 @@
 @import "tailwindcss";
+
 .prose h2 {
-    font-size: 1.5rem;
-    font-weight: 700;
-    margin-top: 1.5rem;
-    margin-bottom: 1rem;
-    color: #000000; /* Indigo-800 */
-    border-bottom: 1px solid #e5e7eb; /* Optional underline */
-    padding-bottom: 0.25rem;
-  }
-  
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
+  color: #000000;
+  /* Indigo-800 */
+  border-bottom: 1px solid #e5e7eb;
+  /* Optional underline */
+  padding-bottom: 0.25rem;
+}
+
+.prose h3 {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
+  color: #000000;
+  /* Indigo-800 */
+  border-bottom: 1px solid #e5e7eb;
+  /* Optional underline */
+  padding-bottom: 0.25rem;
+}
